# murrentaja

./: Main.hs  README.md  default.nix  murrentaja.cabal  shell.nix
src/: Diphthongs.hs  Epenthesis.hs  Features.hs  Gemination.hs  Main.hs  Murrentaja.hs  Utils.hs
src/tests/: Tests.hs
src/webapp/: Main.hs
