name: Murrentaja
version: 0.0.1
cabal-version: 2.0
build-type: Simple

library murrentaja-internal
  exposed-modules: Murrentaja
  other-modules: Diphthongs Epenthesis Gemination Lenition Utils
  hs-source-dirs: src
  build-depends: base >= 4.16,
                 containers >= 0.5,
                 optparse-applicative >= 0.17,
                 text >= 1.2.5

executable murrentaja-webserver
  build-depends: murrentaja-internal,
                 base >= 4.16,
                 text >= 1.2.5,
                 yesod >= 1.6
  main-is: Main.hs
  hs-source-dirs: src/webapp
